--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,16 +15,14 @@
         <main class="main-content">
             <section>
                 <h2>About</h2>
-                <p>The programming languages group at the University of Pennsylvania has been a hub for understanding the essence of computation. Research topics include type theory, functional programming, formal verification, and logic.</p>
+                <p>The programming languages group at the Brown University. <p> 
             </section>
 
             <section id="plclub">
-                <h2>PLClub Discussion Group</h2>
-                <p>We meet on Fridays, 12 - 1:00pm at Levine 307.</p>
+                <h2>Atlas Discussion Group</h2>
+                <p>We meet on XXXX.</p>
                 <h3>Rules</h3>
                 <ol>
-                    <li>Talk about PLClub! Anyone is welcome.</li>
-                    <li>If it's your first semester at PLClub, you have to PL.</li>
                     <li>Lunch starts at 11:45am.</li>
                     <li>Talks start at 12:00pm.</li>
                 </ol>
@@ -40,9 +38,9 @@
             </section>
 
             <section>
-                <h2>Related Groups at Penn</h2>
+                <h2>Related Groups at Brown</h2>
                 <ul>
-                    <li>PRECISE</li>
+                    <li>XXXXX</li>
                     <li>Distributed Systems Laboratory</li>
                     <!-- ... other groups ... -->
                 </ul>
