--- a/layouts/publications/list.html
+++ b/layouts/publications/list.html
@@ -44,7 +44,7 @@
           <input
             type="text"
             id="pubSearch"
-            placeholder="Search keywords..."
+            placeholder="Search"
             class="publication-search"
           >
         </div>
@@ -52,6 +52,11 @@
         <div>
           <h3 class="filter-title">Types</h3>
           <div id="typeFilters" class="filter-row"></div>
+        </div>
+
+        <div>
+          <h3 class="filter-title">Tags</h3>
+          <div id="tagFilters" class="filter-row"></div>
         </div>
 
         <div>
@@ -74,8 +79,10 @@
               {{ $pdfPath := printf "pdf/%s.pdf" $entry.id }}
               {{ $pdfStaticPath := printf "static/%s" $pdfPath }}
               {{ $pdfURL := relURL $pdfPath }}
-              {{ $search := printf "%s %s %s %s %v" $entry.title $entry.authors $entry.venue $entry.type $entry.year }}
-              <li class="pub" data-type="{{ $entry.type }}" data-year="{{ $entry.year }}" data-search="{{ lower $search }}">
+              {{ $tags := $entry.tags | default (slice) }}
+              {{ $searchTags := delimit $tags " " }}
+              {{ $search := printf "%s %s %s %s %v %s" $entry.title $entry.authors $entry.venue $entry.type $entry.year $searchTags }}
+              <li class="pub" data-type="{{ $entry.type }}" data-year="{{ $entry.year }}" data-search="{{ lower $search }}" data-tags="{{ delimit $tags "||" }}">
                 {{ if $entry.url }}
                   <strong><a href="{{ $entry.url }}" target="_blank" rel="noopener noreferrer">{{ $entry.title }}</a></strong><br>
                 {{ else }}
