Make urls relative
Signed-off-by: Evangelos Lamprou <vagos@lamprou.xyz>

--- a/layouts/shortcodes/team-home-members.html
+++ b/layouts/shortcodes/team-home-members.html
@@ -2,7 +2,7 @@
 <div class="team-home-grid">
   {{- range $people -}}
   <article class="team-home-card">
-    <img class="team-photo" src="{{ printf "../profile_pictures/%s" .photo }}" alt="{{ .name }}">
+    <img class="team-photo" src="{{ (printf "profile_pictures/%s" .photo) | relURL }}" alt="{{ .name }}">
     <strong>
       {{- if .website -}}
       <a href="{{ .website }}" title="{{ .name }}">{{ .name }}</a>
